--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-nav {
+.container {
   display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.container div {
+  border: 1px solid black;
+  padding: 5px;
 }
